fix overflow

--- a/style.css
+++ b/style.css
@@ -65,6 +65,6 @@
     height: 100%;
 }
 
-body {
-    /* background-color: #ebebe0; */
+#amongus {
+    overflow: hidden;
 }
